# e-learning

./: .gitignore  Dockerfile  docker-compose.yml  manage.py  pyproject.toml
docs/: Cache Framework.md  cmds.md
educa/: settings.py  urls.py
educa/courses/: forms.py  models.py  urls.py  views.py
educa/courses/fixtures/: subjects.json
educa/courses/migrations/: 0001_initial.py  0002_content_file_image_text_video.py  0003_alter_content_options_alter_module_options_and_more.py  0004_course_students.py
educa/courses/templates/courses/course/: detail.html
educa/courses/templates/courses/manage/course/: list.html
educa/courses/templates/courses/manage/module/: content_list.html
educa/settings/: base.py  local.py  prod.py
educa/students/: forms.py  urls.py  views.py
media/images/: th-3156467574
